--- a/Entrega_1/app/src/main/res/layout/activity_index.xml
+++ b/Entrega_1/app/src/main/res/layout/activity_index.xml
@@ -7,68 +7,85 @@
     android:background="#E9DADA"
     tools:context=".activity.IndexActivity">
 
+    <!-- Logo -->
     <ImageView
         android:id="@+id/imageView2"
         android:layout_width="200dp"
         android:layout_height="150dp"
         android:layout_marginTop="115dp"
+        android:contentDescription="Logo"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_chainStyle="packed"
         app:srcCompat="@drawable/logo" />
 
+    <!-- Botão Entre -->
     <Button
         android:id="@+id/button"
         android:layout_width="308dp"
         android:layout_height="51dp"
+        android:layout_marginTop="75dp"
         android:backgroundTint="#264E33"
         android:fontFamily="@font/nunitobold"
         android:text="Entre"
         android:textColor="#FFFFFF"
-        android:textSize="18dp"
-        tools:layout_editor_absoluteX="51dp"
-        tools:layout_editor_absoluteY="341dp" />
+        android:textSize="18sp"
+        app:layout_constraintTop_toBottomOf="@id/imageView2"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
+    <!-- Texto Cadastre-se -->
     <TextView
         android:id="@+id/textView4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
         android:fontFamily="@font/nunitobold"
         android:text="Cadastre-se"
         android:textColor="#264E33"
-        android:textSize="15dp"
-        tools:layout_editor_absoluteX="164dp"
-        tools:layout_editor_absoluteY="407dp" />
+        android:textSize="15sp"
+        app:layout_constraintTop_toBottomOf="@id/button"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
+    <!-- Instagram -->
     <ImageView
         android:id="@+id/imageView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="50dp"
+        android:contentDescription="Instagram"
         app:srcCompat="@drawable/instagram"
-        tools:layout_editor_absoluteX="180dp"
-        tools:layout_editor_absoluteY="513dp" />
+        app:layout_constraintTop_toBottomOf="@id/textView4"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
+    <!-- Powered by -->
     <TextView
         android:id="@+id/textView5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="30dp"
         android:fontFamily="@font/nunitobold"
         android:text="Powered by TechSnack®"
         android:textColor="#264E33"
-        android:textSize="15dp"
-        tools:layout_editor_absoluteX="118dp"
-        tools:layout_editor_absoluteY="666dp" />
+        android:textSize="15sp"
+        app:layout_constraintBottom_toTopOf="@id/textView6"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
+    <!-- Ano -->
     <TextView
         android:id="@+id/textView6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="10dp"
         android:fontFamily="@font/nunitobold"
         android:text="2025"
         android:textColor="#264E33"
-        android:textSize="15dp"
-        tools:layout_editor_absoluteX="188dp"
-        tools:layout_editor_absoluteY="694dp" />
+        android:textSize="15sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
-
+</androidx.constraintlayout.widget.ConstraintLayout>
