--- a/Entrega_1/app/src/main/res/layout/activity_index.xml
+++ b/Entrega_1/app/src/main/res/layout/activity_index.xml
@@ -12,7 +12,7 @@
         android:id="@+id/imageView2"
         android:layout_width="200dp"
         android:layout_height="150dp"
-        android:layout_marginTop="115dp"
+        android:layout_marginTop="180dp"
         android:contentDescription="Logo"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -21,7 +21,7 @@
 
     <!-- Botão Entre -->
     <Button
-        android:id="@+id/button"
+        android:id="@+id/buttonEnter"
         android:layout_width="308dp"
         android:layout_height="51dp"
         android:layout_marginTop="75dp"
@@ -34,19 +34,22 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
-    <!-- Texto Cadastre-se -->
-    <TextView
-        android:id="@+id/textView4"
+    <!-- Botão Cadastre-se -->
+    <Button
+        android:id="@+id/buttonRegister"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:fontFamily="@font/nunitobold"
+        android:background="@android:color/transparent"
         android:text="Cadastre-se"
         android:textColor="#264E33"
         android:textSize="15sp"
-        app:layout_constraintTop_toBottomOf="@id/button"
+        android:fontFamily="@font/nunitobold"
+        android:stateListAnimator="@null"
+        app:layout_constraintTop_toBottomOf="@id/buttonEnter"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
+
 
     <!-- Instagram -->
     <ImageView
@@ -56,7 +59,7 @@
         android:layout_marginTop="50dp"
         android:contentDescription="Instagram"
         app:srcCompat="@drawable/instagram"
-        app:layout_constraintTop_toBottomOf="@id/textView4"
+        app:layout_constraintTop_toBottomOf="@id/buttonRegister"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
